set(COMMON_COMPILE_OPTIONS_CUDA -O3 -g --ptxas-options=-v -Xcompiler -rdynamic -lineinfo -Wall)

add_executable(GrowingBufferTest GrowingBufferTest.cu)
target_compile_features(GrowingBufferTest PUBLIC ${COMMON_COMPILE_FEATURES})
set_property(TARGET GrowingBufferTest PROPERTY CUDA_SEPARABLE_COMPILATION ON)
set_property(TARGET GrowingBufferTest PROPERTY CUDA_ARCHITECTURES 75)
target_compile_definitions(GrowingBufferTest ${COMMON_DEFINITIONS})
target_compile_options(GrowingBufferTest PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${COMMON_COMPILE_OPTIONS_CXX}>)
target_compile_options(GrowingBufferTest PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${COMMON_COMPILE_OPTIONS_CUDA}>)
target_include_directories(GrowingBufferTest PRIVATE ${COMMON_INCLUDE_DIRECTORIES})
target_link_libraries(GrowingBufferTest PRIVATE cuda )
if(USE_GALLATIN)
    target_link_libraries(GrowingBufferTest PRIVATE gallatin )
endif()
