set(COMMON_COMPILE_OPTIONS_CUDA -O3 -g --ptxas-options=-v -Xcompiler -rdynamic -lineinfo -Wall)

file(GLOB CUDA_SOURCES "*.cu")
foreach(CU_FILE ${CUDA_SOURCES})
    get_filename_component(EXEC_NAME ${CU_FILE} NAME_WE)
    add_executable(${EXEC_NAME} ${CU_FILE})
    target_compile_features(${EXEC_NAME} PUBLIC ${COMMON_COMPILE_FEATURES})
    set_property(TARGET ${EXEC_NAME} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
    set_property(TARGET ${EXEC_NAME} PROPERTY CUDA_ARCHITECTURES 75)
    target_compile_definitions(${EXEC_NAME} ${COMMON_DEFINITIONS})
    target_compile_options(${EXEC_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CXX>:${COMMON_COMPILE_OPTIONS_CXX}>)
    target_compile_options(${EXEC_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:${COMMON_COMPILE_OPTIONS_CUDA}>)
    target_include_directories(${EXEC_NAME} PRIVATE ${COMMON_INCLUDE_DIRECTORIES})

    target_link_libraries(${EXEC_NAME} PRIVATE cuda)
    if(USE_GALLATIN)
        target_link_libraries(${EXEC_NAME} PRIVATE gallatin)
    endif()
endforeach()